# CAID

./: .claudeignore  .env.example  .gitignore  CLAUDE.md  README.md  caid_cli.py  pyproject.toml  tests
.claude/: settings.local.json
agents/: architect.py  critic.py  designer.py
api/: routes.py
core/: llm_wrapper.py  ollama_wrapper.py  orchestrator.py  schema.py  session.py  world_model.py
data/world_model/: materials.yaml  process_rules.yaml
examples/: battery_pack  test_chassis_bolt_assembly.py
examples/battery_pack/: design.py
geometry/: cadquery_ext.py  openscad_ext.py
prompts/: architect_assembly.jinja2  architect_parse.jinja2  critic_dfm.jinja2  designer_generate.jinja2  metadata_extract.jinja2
sim/: fea_engine.py  quick_check.py  service.py  tolerance.py
