[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "caid"
version = "0.2.0"
description = "Computer AI Design — Agentic AI framework for hardware design exploration, optimization, and interference checks"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    # Geometry / simulation (install separately — see README):
    # cadquery>=2.4.0
    # gmsh>=4.12.0
    # CalculiX: https://www.calculix.de (add ccx to PATH)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov",
    "httpx>=0.27.0",    # for FastAPI TestClient
]
standard-parts = [
    # cq_warehouse provides parametric ISO fasteners for CadQuery.
    # Not on PyPI — install from source:
    #   pip install git+https://github.com/gumyr/cq_warehouse.git
    # Without this, StandardPartsCatalog falls back to pure-CadQuery geometry.
    "cq_warehouse @ git+https://github.com/gumyr/cq_warehouse.git",
]

[project.scripts]
caid = "caid_cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
